opentok example try, not functional

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -21,7 +21,8 @@
     <script src="cordova.js"></script>
 
     <!-- opentok js -->
-    <script type="text/javascript" charset="utf-8" src="opentok.js"></script>
+    <script type="text/javascript" charset="utf-8" src="lib/opentok.js"></script> 
+    <script type="text/javascript" charset="utf-8" src="lib/opentok-angular.min.js"></script> 
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
